//file:noinspection GroovyAssignabilityCheck
plugins {
    id 'java'
    id 'jacoco'
    id 'com.senthora.gatlingfx' version '0.1.0-SNAPSHOT' apply false
}
apply from: 'gradle/publish.gradle'

allprojects {
    group = 'com.senthora.gatlingfx'
    version = '0.1.0-SNAPSHOT'

    repositories {
        mavenCentral()
        mavenLocal()
    }
}

subprojects {
    apply plugin: 'java-library'
    apply plugin: 'jacoco'
    apply plugin: 'maven-publish'
    apply plugin: 'signing'

    base {
        archivesName = "${rootProject.name}-${project.name}"
    }

    java {
        toolchain {
            languageVersion = JavaLanguageVersion.of(21)
        }
        withSourcesJar()
        withJavadocJar()
    }
    tasks.withType(Javadoc).configureEach {
        failOnError = false
        options.addStringOption('Xdoclint:none', '-quiet')
    }

    configurations.configureEach {
        resolutionStrategy.dependencySubstitution {
            substitute(module('com.senthora.gatlingfx:gatlingfx-runtime'))
                    .using(project(':runtime'))
            substitute(module('com.senthora.gatlingfx:gatlingfx-runtime-api'))
                    .using(project(':runtime-api'))
        }
    }

    tasks.withType(Test).configureEach {
        outputs.upToDateWhen { false }
        useJUnitPlatform()

        if (name == "integrationTest") {
            shouldRunAfter(tasks.test)
            systemProperty(
                    "gatlingfx.logs.directory",
                    rootProject.file("build/gatlingfx").absolutePath
            )
            jvmArgs("--add-opens=java.base/java.lang=ALL-UNNAMED")
        }
        testLogging {
            events "passed", "skipped", "failed"
            showStandardStreams = true
        }
        jvmArgs '-XX:+EnableDynamicAgentLoading'
    }

    tasks.jacocoTestReport {
        reports {
            xml.required = true
        }
    }

    publishing {
        publications {
            mavenJava(MavenPublication) {
                from components.java

                artifactId = "gatlingfx-${project.name}"

                pom {
                    name = "GatlingFx ${project.name.capitalize()}"
                    description = "Lightweight toolkit for building reusable and maintainable Gatling simulations."
                    url = "https://github.com/senthora/gatlingfx"

                    licenses {
                        license {
                            name = "Apache License, Version 2.0"
                            url = "https://www.apache.org/licenses/LICENSE-2.0.txt"
                        }
                    }
                    developers {
                        developer {
                            id = "senthora"
                            name = "meowpow-png"
                        }
                    }
                    scm {
                        url = "https://github.com/senthora/gatlingfx"
                        connection = "scm:git:https://github.com/senthora/gatlingfx.git"
                        developerConnection = "scm:git:git@github.com:senthora/gatlingfx.git"
                    }
                }
            }
        }
        repositories {
            if (version.toString().endsWith("-SNAPSHOT")) {
                maven {
                    name = "snapshots"
                    url = "https://central.sonatype.com/repository/maven-snapshots/"
                    credentials {
                        username = findProperty("mavenCentralUsername")
                        password = findProperty("mavenCentralPassword")
                    }
                }
            }
        }
    }

    if (!version.toString().endsWith("-SNAPSHOT")) {
        signing {
            useGpgCmd()
            sign publishing.publications.mavenJava
        }
    }
}

tasks.named('jacocoTestReport', JacocoReport) {
    dependsOn subprojects.collectMany { project ->
        project.tasks.matching {
            it.name == 'jacocoTestReport'
        }
    }
    additionalSourceDirs.from files(subprojects.sourceSets.main.allSource.srcDirs)
    sourceDirectories.from files(subprojects.sourceSets.main.allSource.srcDirs)
    classDirectories.from files(subprojects.sourceSets.main.output)

    executionData.from fileTree(layout.projectDirectory) {
        include '**/build/jacoco/*.exec'
    }
    reports {
        xml.required = true
        html.required = true

        xml.outputLocation = layout.buildDirectory.file(
                'reports/jacoco/jacocoRootReport.xml'
        )
        html.outputLocation = layout.buildDirectory.dir(
                'reports/jacoco/html'
        )
    }
}

tasks.register("publishToMavenSnapshots") {
    group = "publishing"
    description = "Publishes SNAPSHOT artifacts to Maven Central snapshots"

    dependsOn(subprojects*.path.collect {
        "${it}:publishAllPublicationsToSnapshotsRepository"
    })
}

tasks.named('clean') {
    delete layout.buildDirectory
}
